# article_miner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_API.md  TODO.md  collect.py  docker-compose.yml  pyproject.toml  results.json
deploy/: README.md
deploy/kubernetes/: .gitignore  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
scripts/: eval_insight_metrics.py  pubmed_workflow.py  pubmed_workflow.sh
src/article_miner/: __main__.py
src/article_miner/application/: __init__.py  collect_articles.py  insight_job.py  pubmed_ports.py
src/article_miner/application/collect/: ports.py  service.py
src/article_miner/application/dedup/: __init__.py  service.py
src/article_miner/application/insights/: __init__.py  job.py  llm_provider_registry.py  report.py
src/article_miner/cli/: __init__.py  app.py  collect_app.py  dedup_app.py  insight_app.py  pubmed_workflow.py
src/article_miner/cli/collect/: __init__.py  app.py
src/article_miner/cli/dedup/: __init__.py  app.py
src/article_miner/cli/insights/: __init__.py  app.py
src/article_miner/dedup/: __init__.py  engine.py
src/article_miner/domain/: __init__.py  article.py  insight.py
src/article_miner/infrastructure/: __init__.py
tests/: conftest.py  test_api.py  test_cli.py  test_collect_service.py  test_dedup_engine.py  test_insight_audit.py  test_insight_persistence.py  test_insight_validation.py  test_live_pubmed_collect.py  test_llm_provider_registry.py  test_pubmed_gateway.py  test_pubmed_xml.py  test_resilient_http.py
(+35 files in other folders)
